# gw

./: .gitattributes  .gitignore
compiler/arsenal-boot/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_ast/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_ast/src/: arena.rs  ast.rs  cst.rs  lib.rs  print.rs  syntax_kind.rs
compiler/arsenal-boot/crates/arsenal_borrow/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_cipher/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_cipher/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_codegen_fast/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_codegen_fast/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_codegen_llvm/: Cargo.toml  build.rs
compiler/arsenal-boot/crates/arsenal_codegen_llvm/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_comptime/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_comptime/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_doc/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_doc/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_driver/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_driver/collide/: MotherBase.gw
compiler/arsenal-boot/crates/arsenal_driver/src/: cli.rs  cmd_build.rs  cmd_dump.rs  cmd_new.rs  lib.rs  main.rs
compiler/arsenal-boot/crates/arsenal_driver/tests/: cli.rs  llvm_backend.rs  phase1_run.rs  phase2_multifile.rs
compiler/arsenal-boot/crates/arsenal_fmt/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_fmt/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_jit/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_jit/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_lex/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_lex/src/: diag.rs  keyword.rs  lexer.rs  lib.rs  token.rs
compiler/arsenal-boot/crates/arsenal_lex/tests/: dump_sample.rs
compiler/arsenal-boot/crates/arsenal_lir/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_lsp/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_lsp/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_mir/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_mir/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_parse/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_parse/src/: grammar.rs  lib.rs  parser.rs  recovery.rs
compiler/arsenal-boot/crates/arsenal_parse/tests/: corpus.rs  dump_sample.rs  smoke.rs  snake_eater.rs
compiler/arsenal-boot/crates/arsenal_parse/tests/snapshots/: corpus__pass_corpus@002_fn_no_args.gw.snap  corpus__pass_corpus@005_fn_no_ret_type.gw.snap  corpus__pass_corpus@006_two_fns.gw.snap  corpus__pass_corpus@007_pub_fn.gw.snap  corpus__pass_corpus@009_class_one_field.gw.snap  corpus__pass_corpus@010_class_three_fields.gw.snap  corpus__pass_corpus@011_int_decimal.gw.snap  corpus__pass_corpus@014_int_binary.gw.snap  corpus__pass_corpus@020_nil.gw.snap  corpus__pass_corpus@026_pow.gw.snap  corpus__pass_corpus@030_band.gw.snap  corpus__pass_corpus@031_bor.gw.snap  corpus__pass_corpus@032_xor.gw.snap  corpus__pass_corpus@034_logand.gw.snap  corpus__pass_corpus@035_logor.gw.snap  corpus__pass_corpus@037_right_assoc.gw.snap  corpus__pass_corpus@042_let_no_type.gw.snap  corpus__pass_corpus@044_let_no_init.gw.snap  corpus__pass_corpus@047_if.gw.snap  corpus__pass_corpus@050_while.gw.snap  corpus__pass_corpus@055_opt_type.gw.snap  corpus__pass_corpus@056_slice_type.gw.snap  corpus__pass_corpus@057_array_type.gw.snap  snake_eater__pass_corpus@001_empty.gw.snap  snake_eater__pass_corpus@002_fn_no_args.gw.snap  snake_eater__pass_corpus@003_fn_one_arg.gw.snap  snake_eater__pass_corpus@004_fn_two_args.gw.snap  snake_eater__pass_corpus@005_fn_no_ret_type.gw.snap  (+56 more)
compiler/arsenal-boot/crates/arsenal_resolve/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_resolve/src/: lib.rs
compiler/arsenal-boot/crates/arsenal_typeck/: Cargo.toml
compiler/arsenal-boot/crates/arsenal_typeck/src/: lib.rs
compiler/gw-bootstrap/: Cargo.toml
compiler/gw-bootstrap/crates/gw_ast/: Cargo.toml
compiler/gw-bootstrap/crates/gw_ast/src/: arena.rs  ast.rs  cst.rs  lib.rs  print.rs  syntax_kind.rs
compiler/gw-bootstrap/crates/gw_borrow/: Cargo.toml
compiler/gw-bootstrap/crates/gw_borrow/src/: lib.rs
compiler/gw-bootstrap/crates/gw_codegen_fast/: Cargo.toml
compiler/gw-bootstrap/crates/gw_codegen_fast/src/: lib.rs
compiler/gw-bootstrap/crates/gw_codegen_llvm/: Cargo.toml  build.rs
compiler/gw-bootstrap/crates/gw_codegen_llvm/src/: lib.rs
compiler/gw-bootstrap/crates/gw_comptime/: Cargo.toml
compiler/gw-bootstrap/crates/gw_comptime/src/: lib.rs
compiler/gw-bootstrap/crates/gw_doc/: Cargo.toml
compiler/gw-bootstrap/crates/gw_driver/: Cargo.toml
compiler/gw-bootstrap/crates/gw_driver/collide/: build.gw  hello.gw
compiler/gw-bootstrap/crates/gw_driver/src/: cli.rs  cmd_build.rs  cmd_dump.rs  cmd_new.rs  lib.rs  main.rs
compiler/gw-bootstrap/crates/gw_driver/tests/: borrow_fail.rs  cli.rs  llvm_backend.rs  phase1_run.rs  phase2_comptime.rs  phase2_multifile.rs
compiler/gw-bootstrap/crates/gw_fmt/: Cargo.toml
compiler/gw-bootstrap/crates/gw_jit/: Cargo.toml
compiler/gw-bootstrap/crates/gw_lex/: Cargo.toml
compiler/gw-bootstrap/crates/gw_lex/src/: diag.rs  keyword.rs  lexer.rs  lib.rs  source.rs  token.rs
compiler/gw-bootstrap/crates/gw_lex/tests/: dump_sample.rs
compiler/gw-bootstrap/crates/gw_lir/: Cargo.toml
compiler/gw-bootstrap/crates/gw_lir/src/: lib.rs
compiler/gw-bootstrap/crates/gw_lsp/: Cargo.toml
compiler/gw-bootstrap/crates/gw_mir/: Cargo.toml
compiler/gw-bootstrap/crates/gw_mir/src/: lib.rs
compiler/gw-bootstrap/crates/gw_parse/: Cargo.toml
compiler/gw-bootstrap/crates/gw_parse/src/: grammar.rs  lib.rs  parser.rs  recovery.rs
compiler/gw-bootstrap/crates/gw_parse/tests/: corpus.rs  dump_sample.rs  smoke.rs
compiler/gw-bootstrap/crates/gw_pkg/: Cargo.toml
compiler/gw-bootstrap/crates/gw_pkg/src/: lib.rs
compiler/gw-bootstrap/crates/gw_resolve/: Cargo.toml
compiler/gw-bootstrap/crates/gw_resolve/src/: lib.rs
compiler/gw-bootstrap/crates/gw_typeck/: Cargo.toml
compiler/gw-bootstrap/crates/gw_typeck/src/: lib.rs
docs/: HANDOFF.md  (+6 more)
(+436 files in other folders)
