# GW bootstrap compiler workspace.
#
# See docs/architecture.md Part A.3 (host language: Rust) and Part N.1 (file layout).
# Phase 0 builds only the four front-end crates (lex, ast, parse, driver); the
# remaining crates listed in Part N.1 exist as empty stubs so the workspace
# graph is in place from day one and downstream tooling (CI, rustfmt, clippy)
# treats every crate uniformly.

[workspace]
resolver = "2"
members = [
    # --- Phase 0 active --------------------------------------------------
    "crates/arsenal_lex",
    "crates/arsenal_ast",
    "crates/arsenal_parse",
    "crates/arsenal_driver",
    # --- Phase 1+ stubs --------------------------------------------------
    "crates/arsenal_resolve",
    "crates/arsenal_typeck",
    "crates/arsenal_mir",
    "crates/arsenal_borrow",
    "crates/arsenal_lir",
    "crates/arsenal_codegen_llvm",
    "crates/arsenal_codegen_fast",
    "crates/arsenal_comptime",
    "crates/arsenal_jit",
    "crates/arsenal_lsp",
    "crates/arsenal_fmt",
    "crates/arsenal_doc",
    "crates/arsenal_cipher",
]

[workspace.package]
version      = "0.0.1"
edition      = "2021"
rust-version = "1.95"
license      = "MIT OR Apache-2.0"

[workspace.dependencies]
# In-tree (Phase 0+ active)
arsenal_lex          = { path = "crates/arsenal_lex" }
arsenal_ast          = { path = "crates/arsenal_ast" }
arsenal_parse        = { path = "crates/arsenal_parse" }
arsenal_resolve      = { path = "crates/arsenal_resolve" }
arsenal_typeck       = { path = "crates/arsenal_typeck" }
arsenal_mir          = { path = "crates/arsenal_mir" }
arsenal_codegen_fast = { path = "crates/arsenal_codegen_fast" }
arsenal_codegen_llvm = { path = "crates/arsenal_codegen_llvm" }

# Foundational
phf        = { version = "0.11", features = ["macros"] }
rustc-hash = "2"
bumpalo    = { version = "3", features = ["collections"] }

# Phase 1 codegen — Cranelift acts as the placeholder backend until the
# TPDE-style fast backend lands in Phase 7 (see arsenal_codegen_fast/lib.rs).
# Cranelift is pure-Rust with zero system dependencies, in contrast to LLVM,
# which is deferred to its own session.
cranelift-codegen   = "0.115"
cranelift-frontend  = "0.115"
cranelift-module    = "0.115"
cranelift-object    = "0.115"
target-lexicon      = "0.12"

# Phase 13 LLVM backend (architecture Part F.2, M.4). Consumed by
# `arsenal_codegen_llvm`; the `llvm-sys` build script needs
# `LLVM_SYS_180_PREFIX` set when compiling the workspace.
inkwell  = { version = "0.5", features = ["llvm18-0"] }
llvm-sys = "180"

# Dev-only
insta = { version = "1", features = ["glob"] }

[profile.dev]
debug       = "line-tables-only"
incremental = true

[profile.release]
lto           = "thin"
codegen-units = 1
debug         = "line-tables-only"
