[package]
name                   = "arsenal_ast"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW concrete syntax tree (CST) and typed AST. See docs/architecture.md Part B.3, C.2."

[dependencies]
arsenal_lex = { workspace = true }
bumpalo     = { workspace = true }
rustc-hash  = { workspace = true }

[lints.rust]
missing_docs = "deny"
