[package]
name                   = "arsenal_doc"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW documentation generator (Phase 9+ stub). See docs/architecture.md Part H.4."

[lints.rust]
missing_docs = "deny"
