[package]
name                   = "arsenal_driver"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW compiler driver — the `arsenal` CLI binary. See docs/architecture.md Part H.1."

[lib]
name = "arsenal_driver"
path = "src/lib.rs"

[[bin]]
name = "arsenal"
path = "src/main.rs"

[dependencies]
arsenal_lex          = { workspace = true }
arsenal_ast          = { workspace = true }
arsenal_parse        = { workspace = true }
arsenal_resolve      = { workspace = true }
arsenal_typeck       = { workspace = true }
arsenal_mir          = { workspace = true }
arsenal_codegen_fast = { workspace = true }
arsenal_codegen_llvm = { workspace = true }
bumpalo              = { workspace = true }
target-lexicon       = { workspace = true }

[lints.rust]
missing_docs = "deny"
