[package]
name                   = "arsenal_mir"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW MIR (CFG of SSA-ish basic blocks). See docs/architecture.md Part B.7, Part C.3."

[dependencies]
arsenal_lex     = { workspace = true }
arsenal_ast     = { workspace = true }
arsenal_resolve = { workspace = true }
arsenal_typeck  = { workspace = true }
rustc-hash      = { workspace = true }

[dev-dependencies]
arsenal_parse = { workspace = true }
bumpalo       = { workspace = true }

[lints.rust]
missing_docs = "deny"
