[package]
name                   = "arsenal_parse"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW recursive-descent parser with Pratt expression precedence. See docs/architecture.md Part B.3."

[dependencies]
arsenal_lex = { workspace = true }
arsenal_ast = { workspace = true }
bumpalo     = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints.rust]
missing_docs = "deny"
