[package]
name                   = "arsenal_typeck"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW bidirectional type checker. See docs/architecture.md Part B.6, Part D."

[dependencies]
arsenal_lex     = { workspace = true }
arsenal_ast     = { workspace = true }
arsenal_resolve = { workspace = true }
rustc-hash      = { workspace = true }

[dev-dependencies]
arsenal_parse = { workspace = true }
bumpalo       = { workspace = true }

[lints.rust]
missing_docs = "deny"
