[package]
name                   = "gw_borrow"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW region-based borrow checker (Phase 3+). See docs/architecture.md Part D.5."

[dependencies]
gw_lex     = { workspace = true }
gw_mir     = { workspace = true }
rustc-hash = { workspace = true }

[lints.rust]
missing_docs = "deny"
