[package]
name                   = "gw_driver"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW compiler driver — the `gw` CLI binary. See docs/architecture.md Part H.1."

[lib]
name = "gw_driver"
path = "src/lib.rs"

[[bin]]
name = "gw"
path = "src/main.rs"

[dependencies]
gw_lex          = { workspace = true }
gw_ast          = { workspace = true }
gw_parse        = { workspace = true }
gw_resolve      = { workspace = true }
gw_typeck       = { workspace = true }
gw_mir          = { workspace = true }
gw_borrow       = { workspace = true }
gw_codegen_fast = { workspace = true }
gw_codegen_llvm = { workspace = true }
bumpalo              = { workspace = true }
target-lexicon       = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints.rust]
missing_docs = "deny"
