[package]
name                   = "gw_parse"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW recursive-descent parser with Pratt expression precedence. See docs/architecture.md Part B.3."

[dependencies]
gw_lex = { workspace = true }
gw_ast = { workspace = true }
bumpalo     = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints.rust]
missing_docs = "deny"
