[package]
name                   = "gw_typeck"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description            = "GW bidirectional type checker. See docs/architecture.md Part B.6, Part D."

[dependencies]
gw_lex      = { workspace = true }
gw_ast      = { workspace = true }
gw_resolve  = { workspace = true }
gw_comptime = { workspace = true }
rustc-hash      = { workspace = true }

[dev-dependencies]
gw_parse = { workspace = true }
bumpalo       = { workspace = true }

[lints.rust]
missing_docs = "deny"
